--- a/package.json
+++ b/package.json
@@ -1,19 +1,15 @@
 {
-  "name": "mongo-inventory",
+  "name": "test-like-home",
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": "nodemon server.cjs"
+    "dev": "concurrently \"cd backend && npm run dev\" \"cd frontend && npm run dev\"",
+    "install": "cd backend && npm i && cd .. && cd frontend && npm i && cd .."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "mongoose": "^7.3.1"
-  },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "concurrently": "^8.2.0"
   }
 }
